--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vue-chess",
-  "version": "2.0.0",
+  "name": "MultiplayerOnlineChess",
+  "version": "3.0.0",
   "scripts": {
     "dev": "node build/dev-server.js",
     "build": "node build/build.js",
